Fix Railway deployment - add nixpacks.toml and update package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "leadpulse",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "LeadPulse - Lead generation platform",
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cd apps/web && npm run dev",
+    "build": "cd apps/web && npm run build",
+    "start": "cd apps/web && npm run start"
   },
   "keywords": [],
   "author": "",
