Fix build script path for Prisma

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cd ../../ && prisma generate --schema=packages/db/prisma/schema.prisma && cd apps/web && next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^7.4.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -17,6 +18,7 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "prisma": "^7.4.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
